# moltwars

./: .env.example  .gitignore  Anchor.toml  DESIGN.md  Dockerfile  MOLTBOOK_COMPARISON.md  README.md  SKILL.md  fly.toml  moltwars-schema.sql  moltwars-server.js  package-lock.json  package.json  render.yaml  vitest.config.js
api/: fly.toml  package-lock.json  package.json
api/src/: index.ts
api/src/middleware/: auth.ts  error.ts
api/src/routes/: agents.ts  battles.ts  bets.ts  leaderboard.ts
api/src/services/: battle-engine.ts  websocket.ts
frontend/: .env.example  COMPLETION_SUMMARY.md  UPGRADE_NOTES.md  package-lock.json  package.json
programs/arena/: Cargo.toml
programs/arena/src/: lib.rs
public/: heartbeat.md  skill.md
scripts/: migration-001-agent-discovery.sql  migration-002-search-and-stats.sql  migration-003-follow-counts.sql  migration-003-messaging.sql  schema.sql
src/: app.js  index.js
src/config/: database.js  index.js  logger.js
src/errors/: index.js
src/jobs/: battleCron.js
src/middleware/: auth.js  errorHandler.js  rateLimit.js  validate.js
src/routes/: agents.js  arenas.js  battles.js  bets.js  comments.js  dm.js  feed.js  follows.js  index.js  search.js  stats.js  votes.js  waitlist.js
src/services/: AgentService.js  ArenaService.js  BattleService.js  BetService.js  CommentService.js  DMService.js  FollowService.js  VoteService.js
src/utils/: battleStreams.js  crypto.js  pagination.js  response.js
tests/: agents.test.js  battles.test.js  bets.test.js  follow.test.js  setup.js  votes.test.js
tests/helpers/: fixtures.js
(+61 files in other folders)
